// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gitcomment should render 1`] = `
<p
  className="loaded"
>
  false
</p>
`;

exports[`gitcomment should render 2`] = `
<ul
  className="comments"
/>
`;

exports[`gitcomment should render 3`] = `
<button
  onClick={[Function]}
>
  Post sthg
</button>
`;

exports[`gitcomment should render 4`] = `
<p
  className="loaded"
>
  true
</p>
`;

exports[`gitcomment should render 5`] = `
<ul
  className="comments"
>
  <li
    key="id"
  >
    body: 
    body
  </li>
</ul>
`;
